--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=spring-security-6
+
+# Overriding the default generated username and password
+#spring.security.user.name=utkarsh111
+#spring.security.user.password=iamawesome
